--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 			<div class="list">
 				<div class="neirong">
 				<a href="" class="tupian">
-					<img src="img/diannao.png" alt="">
+					<img src="img/note5.png" alt="">
 				</a>
 				<a href="" class="wenben">
 					小米笔记本</a>
@@ -610,7 +610,7 @@
 			<div class="list">
 				<div class="neirong">
 				<a href="" class="tupian">
-					<img src="img/mix2.png" alt="">
+					<img src="img/note5.png" alt="">
 				</a>
 				<a href="" class="wenben">
 					小米mix2</a>
